<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="email"
            type="com.vane.android.replycl.data.Email" />
    </data>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingHorizontal="@dimen/grid_0_5"
        android:paddingTop="@dimen/grid_1"
        app:paddingTopSystemWindowInsets="@{true}">

        <!-- TODO: Set MaterialCardView transition name. -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/email_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:transitionName="@string/email_card_detail_transition_name">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/menu_item_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/grid_2"
                android:paddingTop="@dimen/grid_3"
                android:paddingBottom="@dimen/bottom_app_bar_height"
                app:paddingBottomSystemWindowInsets="@{true}">

                <TextView
                    android:id="@+id/subject_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_1"
                    android:layout_marginEnd="@dimen/grid_1"
                    android:text="@{email.subject}"
                    android:textAppearance="?attr/textAppearanceHeadline3"
                    app:layout_constraintEnd_toStartOf="@+id/navigation_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="High school reunion" />

                <ImageButton
                    android:id="@+id/navigation_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="?attr/emphasisMediumAlpha"
                    android:background="?attr/actionBarItemBackground"
                    android:contentDescription="@string/navigate_back_icon_content_desc"
                    android:padding="@dimen/grid_2"
                    app:layout_constraintEnd_toEndOf="@+id/sender_profile_image_view"
                    app:layout_constraintStart_toStartOf="@+id/sender_profile_image_view"
                    app:layout_constraintTop_toTopOf="@+id/subject_text_view"
                    app:srcCompat="@drawable/ic_arrow_down" />

                <TextView
                    android:id="@+id/sender_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_1"
                    android:layout_marginEnd="@dimen/grid_1"
                    android:text="@{email.senderPreview}"
                    android:textAppearance="?attr/textAppearanceBody2"
                    app:layout_constraintEnd_toStartOf="@+id/sender_profile_image_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subject_text_view"
                    tools:text="Ali Connors -- 12m" />

                <TextView
                    android:id="@+id/recipient_text_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_0_25"
                    android:layout_marginEnd="@dimen/grid_1"
                    android:text="@{@string/email_recipient_to(email.recipientsPreview)}"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:textColor="@color/color_on_surface_emphasis_medium"
                    app:layout_constraintEnd_toStartOf="@+id/sender_profile_image_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sender_text_view" />

                <ImageView
                    android:id="@+id/sender_profile_image_view"
                    android:layout_width="@dimen/email_sender_profile_image_size"
                    android:layout_height="@dimen/email_sender_profile_image_size"
                    android:contentDescription="@string/email_sender_profile_content_desc"
                    android:scaleType="centerCrop"
                    app:glideCircularCrop="@{true}"
                    app:glideSrc="@{email.sender.avatar}"
                    app:layout_constraintBottom_toBottomOf="@+id/recipient_text_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/sender_text_view"
                    tools:src="@drawable/avatar_3" />

                <TextView
                    android:id="@+id/body_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_3"
                    android:text="@{email.body}"
                    android:textAppearance="?attr/textAppearanceBody1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sender_profile_image_view" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/attachment_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_3"
                    android:overScrollMode="never"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/body_text_view" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>

</layout>