<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="email"
            type="com.vane.android.replycl.data.Email" />

        <variable
            name="focusedRecipient"
            type="com.vane.android.replycl.data.Account" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:colorBackground"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:paddingHorizontal="@dimen/grid_0_5"
        android:paddingTop="@dimen/grid_1"
        app:paddingTopSystemWindowInsets="@{true}">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/email_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/compose_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/grid_2">

                <ImageButton
                    android:id="@+id/close_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/grid_1"
                    android:background="?attr/actionBarItemBackground"
                    android:contentDescription="@string/compose_close_content_desc"
                    android:padding="@dimen/min_icon_target_padding"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_close"
                    app:tint="@color/color_on_surface_emphasis_disabled" />

                <EditText
                    android:id="@+id/subject_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/grid_2"
                    android:background="@android:color/transparent"
                    android:hint="@string/compose_subject_hint"
                    android:minHeight="@dimen/min_touch_target_size"
                    android:paddingVertical="@dimen/grid_1"
                    android:text="@{email.subject}"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    app:layout_constraintEnd_toStartOf="@+id/send_icon"
                    app:layout_constraintStart_toEndOf="@id/close_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/send_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/grid_1"
                    android:background="?attr/actionBarItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/compose_send_content_desc"
                    android:focusable="true"
                    android:padding="@dimen/min_icon_target_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_twotone_send"
                    app:tint="?attr/colorPrimary" />

                <ImageView
                    android:id="@+id/subject_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="@dimen/grid_2"
                    android:layout_marginTop="@dimen/grid_1"
                    android:background="@drawable/divider"
                    app:backgroundTint="@color/color_on_surface_divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/subject_edit_text" />

                <Spinner
                    android:id="@+id/sender_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_0_5"
                    android:layout_marginEnd="@dimen/grid_1"
                    android:foreground="?attr/selectableItemBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/subject_divider"
                    app:popupElevationOverlay="@{@dimen/plane_16}" />

                <ImageView
                    android:id="@+id/sender_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="@dimen/grid_2"
                    android:layout_marginTop="@dimen/grid_0_5"
                    android:background="@drawable/divider"
                    app:backgroundTint="@color/color_on_surface_divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sender_spinner" />

                <HorizontalScrollView
                    android:id="@+id/recipient_scroll_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_1"
                    android:layout_marginEnd="@dimen/grid_2"
                    android:clipToPadding="false"
                    android:contentDescription="@string/compose_recipient_group_content_desc"
                    android:fadingEdgeLength="@dimen/grid_3"
                    android:minHeight="48dp"
                    android:overScrollMode="never"
                    android:paddingVertical="@dimen/grid_0_25"
                    android:requiresFadingEdge="horizontal"
                    android:scrollbars="none"
                    app:layout_constraintEnd_toStartOf="@id/recipient_add_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sender_divider">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/recipient_chip_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/grid_2"
                        android:scrollbars="none"
                        app:singleLine="true" />

                </HorizontalScrollView>

                <ImageButton
                    android:id="@+id/recipient_add_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/grid_1"
                    android:background="?attr/actionBarItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/compose_add_recipient_icon_content_desc"
                    android:focusable="true"
                    android:padding="@dimen/min_icon_target_padding"
                    app:layout_constraintBottom_toBottomOf="@id/recipient_scroll_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/recipient_scroll_view"
                    app:srcCompat="@drawable/ic_twotone_add_circle_outline"
                    app:tint="@color/color_on_surface_emphasis_disabled" />

                <ImageView
                    android:id="@+id/recipient_divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="@dimen/grid_2"
                    android:layout_marginTop="@dimen/grid_1"
                    android:background="@drawable/divider"
                    app:backgroundTint="@color/color_on_surface_divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recipient_scroll_view" />

                <EditText
                    android:id="@+id/body_text_view"
                    paddingBottomSystemWindowInsets="@{true}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/grid_2"
                    android:layout_marginTop="@dimen/grid_2"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:hint="@string/compose_body_hint"
                    android:minHeight="250dp"
                    android:paddingBottom="@dimen/grid_4"
                    android:text="@{email.body}"
                    android:textAppearance="?attr/textAppearanceBody1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recipient_divider"
                    app:lineHeight="24sp" />

                <!-- An invisible scrim that captures click events when a chip has been expanded.-->

                <View
                    android:id="@+id/recipient_card_scrim"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/recipient_card_view"
                    android:layout_width="360dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/grid_2"
                    android:layout_marginTop="@dimen/grid_2"
                    android:layout_marginEnd="@dimen/grid_2"
                    android:visibility="invisible"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="@dimen/email_recipient_card_popup_elevation"
                    app:layout_constraintStart_toStartOf="@id/close_icon"
                    app:layout_constraintTop_toTopOf="@id/close_icon">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/colorOnSecondary"
                            android:minHeight="?attr/listPreferredItemHeight"
                            android:paddingHorizontal="@dimen/grid_2">

                            <ImageView
                                android:id="@+id/account_profile_image_view"
                                android:layout_width="@dimen/email_sender_profile_image_size"
                                android:layout_height="@dimen/email_sender_profile_image_size"
                                android:contentDescription="@{focusedRecipient.email}"
                                app:glideCircularCrop="@{true}"
                                app:glideSrc="@{focusedRecipient.avatar}"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/account_address_text_view"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="@dimen/grid_2"
                                android:drawablePadding="@dimen/grid_3"
                                android:ellipsize="end"
                                android:lines="1"
                                android:text="@{focusedRecipient.email}"
                                android:textAppearance="?attr/textAppearanceBody1"
                                android:textColor="@color/color_navigation_drawer_menu_item"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@id/remove_button"
                                app:layout_constraintStart_toEndOf="@id/account_profile_image_view"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:text="hikingfan@gmail.com" />

                            <!-- This button's functionality is disabled since removing a -->
                            <!-- recipient is not supported in this sample app.-->
                            <androidx.appcompat.widget.AppCompatImageButton
                                android:id="@+id/remove_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/ic_circle"
                                android:backgroundTint="@color/color_navigation_drawer_menu_item"
                                android:clickable="false"
                                android:contentDescription="@string/compose_close_content_desc"
                                android:focusable="false"
                                android:padding="@dimen/grid_0_5"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/ic_close_small"
                                app:tint="?attr/colorOnSecondary" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="?attr/listPreferredItemHeight"
                            android:paddingHorizontal="@dimen/grid_2">

                            <ImageView
                                android:id="@+id/alt_account_profile_image_view"
                                android:layout_width="@dimen/email_sender_profile_image_size"
                                android:layout_height="@dimen/email_sender_profile_image_size"
                                android:contentDescription="@{focusedRecipient.email}"
                                app:glideCircularCrop="@{true}"
                                app:glideSrc="@{focusedRecipient.avatar}"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/alt_account_address_text_view"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="@dimen/grid_2"
                                android:ellipsize="end"
                                android:lines="1"
                                android:text="@{focusedRecipient.altEmail}"
                                android:textAppearance="?attr/textAppearanceBody1"
                                android:textColor="@color/color_on_surface_emphasis_high"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@id/alt_account_profile_image_view"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:text="hikingfan@gmail.com" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>

</layout>